@@ -34,6 +34,9 @@
 LogListModel::LogListModel(QObject *parent)
   : QAbstractTableModel(parent)
 {
+  model_filter="";
+  model_recent=false;
+
   //
   // Icons
   //
@@ -72,7 +75,7 @@ LogListModel::LogListModel(QObject *parent)
   model_column_alignments.push_back((int)Qt::AlignVCenter|Qt::AlignLeft);
 
   model_service_name=QObject::tr("ALL");
-  update();
+  update(model_filter,model_recent);
 }
 
 
@@ -105,7 +108,7 @@ QModelIndex LogListModel::index(const QString &logname) const
 }
 
 
-void LogListModel::update()
+void LogListModel::update(const QString &filter,bool recent)
 {
   struct rd_log *logs=NULL;
   QString service_name="";
@@ -115,7 +118,7 @@ void LogListModel::update()
   if(model_service_name!=QObject::tr("ALL")) {
     service_name=model_service_name;
   }
-  if((err=cnf->listLogs(&logs,&numrecs,service_name,"",false))==0) {
+  if((err=cnf->listLogs(&logs,&numrecs,service_name,"",false,filter,recent))==0) {
     if(model_log_names.size()>0) {
       beginRemoveRows(QModelIndex(),0,model_column_fields.size()-1);
       model_log_names.clear();
@@ -175,6 +178,8 @@ void LogListModel::update()
   else {
     emit capiError(err,"error in RDListCarts() call");
   }
+  model_filter=filter;
+  model_recent=recent;
 }
 
 
@@ -266,7 +271,7 @@ void LogListModel::setServiceName(const QString &str)
 {
   if(str!=model_service_name) {
     model_service_name=str;
-    update();
+    update(model_filter,model_recent);
   }
 }
 
