@@ -2,7 +2,7 @@
 //
 // ServiceBox widget
 //
-//   (C) Copyright 2015-2016 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2015-2017 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -27,7 +27,7 @@ class ServiceBox : public ComboBox
 {
  Q_OBJECT;
  public:
- ServiceBox(bool incl_all,QWidget *parent=0);
+  ServiceBox(bool incl_all,QWidget *parent=0);
   int reload();
 
  private:
